syntax="proto3";

package auth;

option go_package = "./pkg/pb";

service AuthService{
    rpc Register(RequestRegister) returns (ResponseRegister) {}
    rpc Login (RequestLogin) returns (ResponseLogin) {}
    rpc Validate (RequestValidate) returns (ResponseValidate) {}
}

message RequestRegister{
    string email = 1;
    string password = 2;
}

message ResponseRegister {
    int64 status = 1;
    string error = 2;
}

message RequestLogin {
    string email = 1;
    string password = 2;
}

message ResponseLogin {
    int64 status = 1;
    string error = 2;
    string token = 3;
}

message RequestValidate {
    string token = 1;
}

message ResponseValidate {
    int64 status = 1;
    string error = 2;
    int64 userId = 3;
}